tests/valid/noNamespaceMerging.ts
// @ts-nocheck
const MyModule = {
	value: 5,
};
