tests/invalid/noExportAssignmentLet.ts
// @ts-nocheck
let value = 5;
export = value;
